# CalculatorX

./: .gitignore  ERADME.md  README.md  build-profile.json5  build-profile.json5.template  local.properties.template
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: 计算的审查.md
entry/: build-profile.json5  obfuscation-rules.txt
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  FastMath.cpp  FastMath.h  MathValidator.h  engine.cpp
entry/src/main/cpp/include/: gmp.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/components/: BottomKeyboard.ets  TopKeyboard.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: About.ets  DocViewer.ets  Index.ets  Settings.ets
entry/src/main/ets/pages/settings/: About.ets  Credits.ets  Settings.ets
entry/src/main/ets/utils/: CalculatorConfigs.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/rawfile/: calculator.html  calculator_old.html
